# example-python

./: README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
tests/: test_mypythonproject.py
